<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="169dp"
        android:layout_height="127dp"
        android:layout_marginEnd="206dp"
        android:src="@drawable/shape"
        app:layout_constraintBottom_toTopOf="@+id/welcomeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="Welcome Back!"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/quickCashLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/quickCashLogo"
        android:layout_width="201dp"
        android:layout_height="92dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="105dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="17dp"
        android:src="@drawable/login_draw"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLabel" />

    <EditText
        android:id="@+id/email"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/input"
        android:hint="Email"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quickCashLogo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/input"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_btn"
        android:text="Login"
        app:layout_constraintBottom_toTopOf="@+id/noAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="135dp"
        android:text="Don't have an account?"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/statusLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="45dp"
        android:background="@android:color/transparent"
        android:text="Sign up"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noAccount" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="222dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="9dp"
        android:text=""
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/forgotPassButton"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="26dp"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:text="Forgot Password"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/noAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.414" />


</androidx.constraintlayout.widget.ConstraintLayout>