<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="Account Registration">
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="Full Name"
            android:width="200dp"
            android:id="@+id/nameBox">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="Email"
            android:width="200dp"
            android:id="@+id/emailBox">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="Password"
            android:width="200dp"
            android:id="@+id/passwordbox">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="Contact Number"
            android:width="200dp"
            android:id="@+id/numberbox">
        </EditText>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="200dp"
            android:id="@+id/roleSpinner">
        </Spinner>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:id="@+id/registerButton"
            android:text="Register">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:id="@+id/statusLabel"
            android:text="">
        </TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>